<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pHarmaETSII</string>
    <string name="hello_world"> 1. Empieza el día con un delicioso desayuno. Así “llenaras el tanque de gasolina” para poder circular después de tantas horas sin comer. \n  2. Mantente en movimiento: Trata de tener actividad física en tus rutinas diarias como caminar, usar las escaleras o hacer abdominales mientras ves la tele. \n 3. Consume un lunch inteligente: Es una manera de “rellenar el tanque”, así no llegaras a la siguiente comida con mucha hambre lo que te ayuda a no comer impulsivamente. \n 4. Ejercítate Hacer ejercicio rutinariamente (por lo menos 30 minutos tres veces a la semana) te ayuda a tener más energía, tu corazón funciona mejor y te ves y te sientes ¡Increíble!\n </string>
    <string name="action_settings">Settings</string>
    <string name="CheckBox">Agrega un medicamento</string>
    <string name="Reloj">Reloj</string>
    <string name="Medicamento">Introduce Medicamento</string>
    <string name="title_activity_ver">Ver base de datos</string>
    <string name="title_activity_borrar">Borrar base de datos</string>
    <string name="title_activity_comousar">Como usar la aplicación</string>
    <string name="Bienvenida">¡Nunca más olvides tomar tus pastillas!</string>
    <string name="manana">Mañana (8:00)</string>
    <string name="tarde">Tarde (15:00)</string>
    <string name="noche">Noche(21:00)</string>
    <string name="boton_fecha_inicio">Fecha de Inicio</string>
    <string name="boton_fecha_fin">Fecha de Fin</string>
    <string name="Boton2">Guardar</string>
    <string name="Boton1">Activa</string>
    <string name="title_activity_pastilla1">¡Recuerda tu pastilla!</string>
    <string name="Nombre">Nombre</string>
    <string name="menu_buscar">Buscar</string>
    <string name="menu_actualizar">Actualizar</string>
    <string name="menu_opciones">Opciones</string>
    <string name="Icono">Icono</string>
    <string name="introduccion1">Pastilla 1</string>
    <string name="campo_nombre">Nombre del Medicamento</string>
    <string name="nombre">Nombre</string>
    <string name="Titulo">Titulo</string>
    <string name="etiqueta_dato">Numero</string>
    <string name="dato">Introducir numero</string>
    <string name="add">Añadir</string>
    <string name="verbasededatos">Ver base de datos</string>
    <string name="comousarapp">Nunca más olvidarás tomar sus pastillas a tiempo.\n Gracias a esta aplicación donde puedo introducir el nombre de la pastilla que se tiene que tomar, la fecha cuando tiene que terminar de tomar su medicamento como las horas a las que se tiene que tomar la medicación. Gracias a esta aplicación mediante una notificación le recordaremos cuando tomarlas.\n Para añadir un nuevo medicamento lo único que tiene que hacer es ir a la página para agregar una medicamento y rellenar los campos de: nombre, fecha final y a que hora quiere tomarsela.\n Fácil </string>
    <string name="stop_alarm">Parar</string>
    <string name="boton2">Agregar medicamento</string>
    <string name="boton_borrar">¡Borrar!</string>
    <string name="deprecation">deprecation</string>
    <string name="title_activity_consejos">Consejos</string>
    <string name="title_activity_alarm">AlarmActivity</string>

</resources>