<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="borrar"
        android:orientation="vertical"
        tools:context="com.example.pharmaetsii.Pastilla1" >

        <!--  <TextView
            android:id="@+id/fechaInicio"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/introduccion1"
            android:textColor="#0F50FF"
            android:textStyle="bold" /> -->


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >


            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campo_nombre"
                    android:textColor="#0F50FF"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/Nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre" >

                    <requestFocus />
                </EditText>
            </TableRow>


            <TableRow android:paddingTop="15dp" >

                <Button
                    android:id="@+id/botonFechaFin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setFechaFin"
                    android:text="@string/boton_fecha_fin"
                    android:textColor="#0F50FF" />


                <TableRow android:paddingTop="15dp" >

                    <TextView
                        android:id="@+id/fechaFin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:textColor="#0F50FF" />
                </TableRow>
            </TableRow>
        </TableLayout>

        <CheckBox
            android:id="@+id/checkbox_manana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manana"
            android:textColor="#0F50FF" />

        <!-- android:onClick="manana" -->

        <CheckBox
            android:id="@+id/checkbox_tarde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarde"
            android:textColor="#0F50FF" />

        <!-- android:onClick="tarde" -->

        <CheckBox
            android:id="@+id/checkbox_noche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noche"
            android:textColor="#0F50FF" />

        <!-- android:onClick="noche" -->

        <Button
            android:id="@+id/boton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="comprobar"
            android:text="@string/Boton2"
            android:textColor="#0F50FF" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="borrar"
            android:text="@string/boton_borrar"
            android:textColor="#0F50FF" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Titulo"
            android:src="@drawable/tit" />
    </LinearLayout>
<ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice" />

</android.support.v4.widget.DrawerLayout>
    